syntax = "proto3";

package board;

option go_package = "github.com/seongha-moon/blog-code-example/performance/server/go/proto";

message Board {
  int64 id = 1;
  string title = 2;
  string content = 3;
  string created_at = 4;
}

message GetBoardRequest {}

message GetBoardResponse {
  Board board = 1;
}

service BoardService {
  rpc GetBoard(GetBoardRequest) returns (GetBoardResponse);
} 